Set color of card descriptions to dark grey. Decrease underline offset of card titles in hover state.

--- a/css/3_block.css
+++ b/css/3_block.css
@@ -140,9 +140,13 @@ a.btn-secondary,
   text-decoration: unset;
 }
 
+.b-card p {
+  color: var(--color-grey);
+}
+
 .b-card > a:hover h3 {
   text-decoration: underline;
-  text-underline-offset: var(--space-xxs);
+  text-underline-offset: 0.25rem;
 }
 
 /* TABLE */
